# loqa-voice-assistant

./: .dockerignore  .gitignore  Cargo.toml  README.md  future.md
deployments/: Dockerfile.hub  docker-compose.yml
docs/: architecture.md
hub/: go.mod  go.sum
hub/cmd/: main.go
hub/cmd/device-service/: main.go
hub/internal/grpc/: audio_service.go
hub/internal/llm/: whisper.go
hub/internal/server/: server.go
hub/loqa-hub/: go.mod
hub/loqa-hub/cmd/: main.go
hub/loqa-hub/cmd/device-service/: main.go
hub/loqa-hub/internal/grpc/: audio_service.go
hub/loqa-hub/internal/llm/: whisper_stub.go
hub/loqa-hub/internal/server/: server.go
lite/: main.cpp  platformio.ini
loqa-hub/: Cargo.toml
loqa-hub/src/: main.rs
nlp/: Cargo.toml
prime/: main.cpp  platformio.ini
proto/go/: go.mod
puck/test-go/: go.mod
puck/test-go/cmd/: main.go
puck/test-go/internal/grpc/: client.go
tools/: build.sh
